k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gophprofile-api
  namespace: gophprofile
  labels:
    app: gophprofile-api

spec:
  type: ClusterIP

  selector:
    app: gophprofile-api

  ports:
    - name: http
      port: 80
      targetPort: 8080

    - name: metrics
      port: 9090
      targetPort: 9090
