k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gophprofile-api
  namespace: gophprofile

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - host: gophprofile.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: gophprofile-api
                port:
                  number: 80
