k8s/api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gophprofile-api
  namespace: gophprofile

spec:
  podSelector:
    matchLabels:
      app: gophprofile-api

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres

      ports:
        - protocol: TCP
          port: 5432

    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq

      ports:
        - protocol: TCP
          port: 5672

    - to:
        - podSelector:
            matchLabels:
              app: minio

      ports:
        - protocol: TCP
          port: 9000
